fix:Corrigindo get do campo
Quando clica no botão gerar a mascara o campo CPD estava sendo copiado no lugar de circuito.

--- a/index.html
+++ b/index.html
@@ -641,9 +641,9 @@
                         <div class="field">
                             <label class="label is-small">Horario de Acesso</label>
                             <div class="control has-icons-left has-icons-right">
-                                <input id="abAcesso" class="input is-small" type="text" placeholder="Interno / Task / INC">
+                                <input id="abAcesso" class="input is-small" type="text" placeholder="--/--/---- --:--:--">
                                 <span class="icon is-small is-left">
-                                <i class="fas fa-headset"></i>
+                                <i class="fas fa-clock"></i>
                             </span>
                             </div>
                         </div>
@@ -661,7 +661,7 @@
                         <div class="field">
                             <label class="label is-small">Email</label>
                             <div class="control has-icons-left has-icons-right">
-                                <input id="abEmail" class="input is-small" type="text" placeholder="Local / UNIORG">
+                                <input id="abEmail" class="input is-small" type="text" placeholder="oi@oi.com.br">
                                 <span class="icon is-small is-left">
                                 <i class="fas fa-headset"></i>
                             </span>
@@ -679,7 +679,7 @@
                         <!-- Campo do select e botões -->
                         <div class="field">
 
-                            <label class="label is-small">Reclamação</label>
+                            <label class="label is-small">Reclamação <i class="fas fa-bug"></i></label>
 
                             <!-- Usando o elemento level para alinha os botoẽs -->
                             <div class="level">
